<resources>
    <string name="app_name">TLV Quiz</string>
    <string name="button_reset">Reset</string>
    <string name="button_submit">Submit</string>

    <string name="question1_answer">Israel</string>
    <string name="question1_body">Where is Tel Aviv located?</string>
    <string name="question1_false1">Ireland</string>
    <string name="question1_false2">Isle of Man</string>

    <string name="question2_answer">1909</string>
    <string name="question2_body">When was it founded?</string>
    <string name="question2_hint">Year (4 digits)</string>

    <string name="question3_answer">The Mediterranean</string>
    <string name="question3_body">Tel Aviv sits on the coastline of which sea?</string>
    <string name="question3_false1">The Dead Sea</string>
    <string name="question3_false2">The Sea of Galilee</string>

    <string name="question4_body">Which nicknames does it have?</string>
    <string name="question4_answer1">The White City</string>
    <string name="question4_answer2">Non Stop City</string>
    <string name="question4_false1">The Big Apple</string>

    <string name="question5_answer">More than 10</string>
    <string name="question5_body">How many public beaches are there in Tel Aviv?</string>
    <string name="question5_false1">2</string>
    <string name="question5_false2">5</string>

    <string name="tlv">TLV</string>
    <string name="score_message">You scored %d in this quiz.</string>
    <string name="fail_message">Feel free to try again.</string>
    <string name="pass_message">Hurray!</string>
    <string name="welcome">Welcome to TLV Quiz!</string>

    <string name="photo_credit">Photo Credit</string>
    <string name="icons_credit">Icons Credit</string>
    <string name="photo_credit_body">Tel Aviv photo by Adam Jang on Unsplash</string>
    <string name="icons_credit_body">Answer icons designed by Pixel Buddha from Flaticon</string>
    <string name="results_label">TLV Quiz Results</string>
    <string name="q1">1</string>
    <string name="q2">2</string>
    <string name="q3">3</string>
    <string name="q4">4</string>
    <string name="q5">5</string>
</resources>
