<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.amaliapps.tlvquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/tlv_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/tlv"
                android:cropToPadding="false"
                android:scaleType="fitStart"
                android:src="@drawable/tlv" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tlv_image"
                android:text="@string/welcome"
                android:textSize="32sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question_where_id"
                style="@style/QuestionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1" />

            <TextView
                android:id="@+id/question_where_body"
                style="@style/QuestionBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/question_where_id"
                android:layout_toRightOf="@id/question_where_id"
                android:text="@string/question1_body" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_where_body"
                android:layout_toEndOf="@id/question_where_id"
                android:layout_toRightOf="@id/question_where_id"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_ireland"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_false1" />

                <RadioButton
                    android:id="@+id/radio_israel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_answer" />

                <RadioButton
                    android:id="@+id/radio_isle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_false2" />
            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question_year_id"
                style="@style/QuestionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2" />

            <TextView
                android:id="@+id/question_year_body"
                style="@style/QuestionBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/question_year_id"
                android:layout_toRightOf="@id/question_year_id"
                android:text="@string/question2_body" />

            <EditText
                android:id="@+id/question_year_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_year_body"
                android:layout_toEndOf="@id/question_year_id"
                android:layout_toRightOf="@id/question_year_id"
                android:hint="@string/question2_hint"
                android:inputType="number" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question_sea_id"
                style="@style/QuestionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3" />

            <TextView
                android:id="@+id/question_sea_body"
                style="@style/QuestionBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/question_sea_id"
                android:layout_toRightOf="@id/question_sea_id"
                android:text="@string/question3_body" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_sea_body"
                android:layout_toEndOf="@id/question_sea_id"
                android:layout_toRightOf="@id/question_sea_id"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_mediterranean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3_answer" />

                <RadioButton
                    android:id="@+id/radio_dead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3_false1" />

                <RadioButton
                    android:id="@+id/radio_galillee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3_false2" />
            </RadioGroup>

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitQuiz"
            android:text="@string/button_submit" />
    </LinearLayout>
</ScrollView>
